Changing border props on input button, thickening up points and lines; fixing invisible tooltips offscreen on resize

--- a/dev/ui/styles/query.css
+++ b/dev/ui/styles/query.css
@@ -81,7 +81,7 @@
 }
 
 #queryForm input {
-    border: 1px solid #F3B544;
+    border: 1px solid transparent;
     border-radius: 2px;
     padding: 10px;
     font-size: 16px;
